# GoogleDriveClone

./: .gitignore  Cargo.toml  README.md  env.example
src/: config.rs  database.rs  main.rs  models.rs  schema.rs
src/auth/: google.rs  jwt.rs  mod.rs
src/handlers/: files.rs  users.rs
src/models/: files.rs  mod.rs  s3_files.rs  users.rs
src/repo/: files.rs
src/repositories/: files.rs  s3_files.rs  users.rs
src/requests/: oauth.rs  query.rs
src/storage/: mod.rs
uploads/: 87ff48e3-8bc8-4e8c-a773-0975acac9e08.data
