[package]
name = "google-drive"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
tokio = { version = "1", features = ["fs", "rt-multi-thread", "macros"] }
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
dotenv = "0.15"
futures-util = "0.3.31"
tokio-util = "0.7.15"
mime_guess = "2.0"
